Simplified english and norwegian zmarket menu phrases.

--- a/cstrike/addons/sourcemod/translations/no/zombiereloaded.phrases.txt
+++ b/cstrike/addons/sourcemod/translations/no/zombiereloaded.phrases.txt
@@ -644,7 +644,7 @@
 
 	"Weapons menu zmarket main rebuy"
 	{
-		"no"		"Kjøp gjeldende våpenvalg"
+		"no"		"Kjøp lagret våpenvalg"
 	}
 
 	"Weapons menu zmarket main auto-rebuy"
