Small timer fixes. Added cvar zr_roundend_balance_teams. See details. Added cvar for disabling team balancing on round end (for use with custom team balancer): zr_roundend_balance_teams. Disabling this will cause players to remain on their current team when a new round starts. If zombies win, everyone will remain on the terrorists team. Fixed invalid handle error after a map change. Fixed language code typo in translations. Infection countdown is no longer displayed if the infection delay is just one second.

--- a/cstrike/addons/sourcemod/translations/no/zombiereloaded.phrases.txt
+++ b/cstrike/addons/sourcemod/translations/no/zombiereloaded.phrases.txt
@@ -361,7 +361,7 @@
 
 	"Infect countdown"
 	{
-		"en"		"Første infeksjon om {1} sekunder."
+		"no"		"Første infeksjon om {1} sekunder."
 	}
 
 	// Menu
